--- a/d02/Lab02_login.html
+++ b/d02/Lab02_login.html
@@ -11,11 +11,11 @@
     <body>
         <div>
             <h2>LOGIN</h2>
-            <form name="form_Login" action="Lab02_login.php">
+            <form name="form_Login" action="Lab02_login.php" method="post">
                 Login name:
-                <input type="text" name="txtLogin" value="aptech" required> <br><br>
+                <input type="text" name="txtLogin" value="Taeyeon" required> <br><br>
                 Password:
-                <input type="password" name="txtPass" value="123" required> <br><br>
+                <input type="password" name="txtPass" value="SNSD" required> <br><br>
                 
                 <input type="submit" name="btnOK" value="Submit"/>
                 <input type="reset" name="btnReset" value="Reset"/>
