--- a/Ass02/Ass02_NewEmp.html
+++ b/Ass02/Ass02_NewEmp.html
@@ -20,8 +20,8 @@
                         Pass : <input type="password" name="txtPass" id="txtPass" value="abc" required><br><br>
                         Full Name : <input type="text" name="txtName" id="txtName"  value="TaylorSwift" required><br><br>
                         Email : <input type="email" name="txtMail" id="txtMail"  value="taylor@gmail.com" required><br><br>
-                        Role : <input type="number" name="txtRole" id="txtRole"  min="1" max ="2" value=2 ><br><br>
-                        Salary : <input type="number" name="txtSal" id="txtSal"  min="100" max ="10000" value=9999 ><br><br>
+                        Role : <input type="number" name="txtRole" id="txtRole"  min="1" max ="2" value=2 required><br><br>
+                        Salary : <input type="number" name="txtSal" id="txtSal"  min="100" max ="10000" value=9999 required><br><br>
                         <input type="submit" name="btnOK" value="Create">
                         <input type="reset" name="btnReset" value="Reset">
                     </form>
